--- a/2025/cssdetodos.css
+++ b/2025/cssdetodos.css
@@ -1,4 +1,29 @@
-float: left;
+.canto{
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: -1;
+	opacity: 1;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #000000;
+border: 3px solid;
+  border-radius: 15px;
+text-align: center;
+
+ display: flex;
+ flex-direction: row;
+justify-content: center;
+
+}
+
+li {
+  float: left;
 border-right: 1px solid #bbbbbb;
 background-color: #444444
 
